--- a/index.css
+++ b/index.css
@@ -6,7 +6,6 @@
   
   body {
     height: 100vh;
-    display: flex;
     background: #f0f0f5;
   }
   
@@ -39,10 +38,23 @@ width: calc(25% - 10px);
 
   button{
     width: 200px;
-    margin-left:30%;
-    background:red;
+    margin-left:45%;
+    background:#3fcc1c;
     height: 50px;
-    margin-top: 500px;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    border-radius: 10px;
+  }
+  
+  input[type=button]{
+    width: 200px;
+    margin-left:45%;
+    background:#e71e04;
+    height: 50px;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    font-size: 30px;
+    border-radius: 10px;
   }
   
   .front,
