--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@ width: calc(25% - 10px);
     margin-top: 70px;
     margin-bottom: 70px;
     border-radius: 10px;
+    font-size: 30px;
   }
   
   input[type=button]{
