--- a/index.css
+++ b/index.css
@@ -45,6 +45,7 @@ width: calc(25% - 10px);
     margin-bottom: 70px;
     border-radius: 10px;
     font-size: 30px;
+    border: none;
   }
   
   input[type=button]{
