--- a/index.css
+++ b/index.css
@@ -45,7 +45,10 @@ width: calc(25% - 10px);
     margin-bottom: 70px;
     border-radius: 10px;
     font-size: 30px;
-    border: none;
+    
+  }
+  button:hover{
+    
   }
   
   input[type=button]{
@@ -57,6 +60,9 @@ width: calc(25% - 10px);
     margin-bottom: 70px;
     font-size: 30px;
     border-radius: 10px;
+  }
+  input[type=button]:hover{
+    color:#3fcc1c
   }
   
   .front,
