--- a/index.css
+++ b/index.css
@@ -2,84 +2,117 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
   }
-  
   body {
-    height: 100vh;
-    background: #f0f0f5;
+    background-color: #BCCEF8;
   }
-  
-  #main {
-    width: 640px;
-    height: 640px;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    perspective: 1000px;
-    
+  .wrapper {
+    box-sizing: content-box;
+    width: 26.87em;
+    padding: 2.5em 3em;
+    background-color: #ededed;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    border-radius: 0.6em;
+    box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
   }
-  
-  .card {
-    
-width: calc(25% - 10px);
-  height: calc(33.333% - 10px);
-  margin: 5px;
-  position: relative;
-  transform: scale(1);
-  transform-style: preserve-3d;
-  transition: transform .5s;
-  box-shadow: 1px 1px 1px rgba(0,0,0,.3);
-  }
-  
-  .card:active {
-    transform: scale(0.97);
-    transition: transform .2s;
-  }
-
-  button{
-    width: 200px;
-    margin-left:45%;
-    background:#3fcc1c;
-    height: 50px;
-    margin-top: 70px;
-    margin-bottom: 70px;
-    border-radius: 10px;
-    font-size: 30px;
-    
-  }
-  button:hover{
-    color: #e71e04;
-  }
-  
-  input[type=button]{
-    width: 200px;
-    margin-left:45%;
-    background:#e71e04;
-    height: 50px;
-    margin-top: 70px;
-    margin-bottom: 70px;
-    font-size: 30px;
-    border-radius: 10px;
-  }
-  input[type=button]:hover{
-    color:#3fcc1c
-  }
-  
-  .front,
-  .back {
+  .game-container {
+    position: relative;
     width: 100%;
-    height: 100%;
-    padding: 20px;
+    display: grid;
+    gap: 0.6em;
+  }
+  .stats-container {
+    text-align: right;
+    margin-bottom: 1.2em;
+  }
+  .stats-container span {
+    font-weight: 600;
+  }
+  .card-container {
+    position: relative;
+    width: 6.25em;
+    height: 6.25em;
+    cursor: pointer;
+  }
+  .card-before,
+  .card-after {
     position: absolute;
     border-radius: 5px;
-    background: #3fcc1c;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 4px solid #000;
+    transition: transform 0.7s ease-out;
     backface-visibility: hidden;
+    color: #ededed;
   }
-  .card.flip {
+  .card-before {
+    background-color: #ededed;
+    font-size: 2.8em;
+    font-weight: 600;
+  }
+  .card-after {
+    background-color: #ffffff;
     transform: rotateY(180deg);
   }
-
-  .front {
+  .card-container.flipped .card-before {
     transform: rotateY(180deg);
   }
-  
+  .card-container.flipped .card-after {
+    transform: rotateY(0deg);
+  }
+  .controls-container {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: #BCCEF8;
+    top: 0;
+  }
+  button {
+    border: none;
+    border-radius: 0.3em;
+    padding: 1em 1.5em;
+    cursor: pointer;
+  }
+  #stop {
+    font-size: 1.1em;
+    display: block;
+    margin: 1.1em auto 0 auto;
+    background-color: #ff0000;
+    color: #ffffff;
+  }
+  #start{
+    background-color: #07a007;
+    color: #ffffff;
+  }
+  .controls-container button {
+    font-size: 1.3em;
+    box-shadow: 0 0.6em 2em rgba(86, 66, 0, 0.2);
+  }
+  .hide {
+    display: none;
+  }
+  #result {
+    text-align: center;
+  }
+  #result h2 {
+    font-size: 2.5em;
+    color: #ffffff;
+    text-shadow: 2px 5px #00000020;
+  }
+  #result h4 {
+    font-size: 1.8em;
+    margin: 0.6em 0 1em 0;
+    color: #ffffff;
+    text-shadow: 2px 5px #00000020;
+  }
